feat: made based on redis but it is giving an error